apps/20-media/jellyfin/overlays/test/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/router.entrypoints: "web, websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "media-redirect-to-https@kubernetescrd"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Jellyfin"
    gethomepage.dev/icon: "jellyfin.png"
    gethomepage.dev/group: "Media"
spec:
  ingressClassName: traefik
  rules:
    - host: "jellyfin.test.truxonline.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
  tls:
    - hosts:
        - "jellyfin.test.truxonline.com"
      secretName: jellyfin-tls
